--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -13,9 +13,10 @@ $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66D9b;
 $red: #e3342f;
-$orange: #ed6009;
+$orange: #ff643f;
 $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 $dark-gray: #555;
+$black: #000;
