--- a/src/global/app.scss
+++ b/src/global/app.scss
@@ -11,14 +11,9 @@
 @import "variables";
 
 body {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
-
-.b-navigation-bar {
-  background-image: linear-gradient(271deg, $blue, $orange);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
 .b-nav-link {
